fixing issue with scrollbar in Navigator component

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,7 +11,7 @@
 }
 
 .navigator {
-  width: 20%;
+  width: 25%;
   margin: 20px;
   margin-right: 10px;
   margin-top: 10px;
@@ -23,6 +23,7 @@
   align-items: flex-end;
   height: 60px;
   margin-top: 20px;
+  margin-right: 20px;
 }
 
 .navigator-controls > div {
@@ -70,9 +71,13 @@
 }
 
 .details {
-  width: 80%;
+  width: 75%;
   margin: 20px;
   margin-left: 10px;
+}
+
+.lesson {
+  margin-right: 20px;
 }
 
 .course-input-container {
@@ -93,6 +98,7 @@
   height: 40px;
   line-height: 40px;
   margin-bottom: 20px;
+  margin-right: 20px;
   -webkit-box-shadow:inset 0 0 2px #000;
        -moz-box-shadow:inset 0 0 2px #000;
             box-shadow:inset 0 0 2px #000;
@@ -136,6 +142,13 @@
 
 .card-menu-icon-container {
   background-color: white;
+  display: flex;
+  align-items: center;
+  margin: 0 5px;
+}
+.card-menu-icon-container-disabled {
+  background-color: white;
+  cursor: not-allowed;
   display: flex;
   align-items: center;
   margin: 0 5px;
@@ -216,6 +229,7 @@
   height: 50px;
   align-items: center;
   justify-content: flex-end;
+  margin-right: 20px;
 }
 
 .react-switch-checkbox {
